# src/pages/api/v1/manufacturers/get.ts
@@ -8,7 +8,7 @@ import { publicMapManufacturer } from "lib/public-mappings/manufacturer.ts"
 export default withRouteSpec({
   ...routes["/api/v1/manufacturers/get"],
   methods: ["GET", "POST", "OPTIONS"],
-  auth: "vercel_protection_secret",
+  auth: "vercel_protection_bypass_secret",
 } as const)(async (req, res) => {
   const manufacturer = req.db.manufacturers.find(
     ({ manufacturer_id }) => manufacturer_id === req.query.manufacturer_id,
